<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <CheckBox
            android:id="@+id/interruptMeasuringOnMinimizeCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interrupt_measuring_on_minimize" />

        <View    
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#CDCDCD"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
        
        <CheckBox
            android:id="@+id/isNetworkLocatingAllowedCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_network_locating_allowed" />

        <View    
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#CDCDCD"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
        
        <CheckBox
            android:id="@+id/showThinkGearCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_think_gear" />

        <View    
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#CDCDCD"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/maxGraphViewShowTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical"
                android:text="@string/max_graph_view_show_time" />

            <EditText
                android:id="@+id/maxGraphViewShowTimeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:ems="10"
                android:hint="@string/time_in_ms"
                android:inputType="number"
                android:text="4000" >

            </EditText>
        </LinearLayout>

        <View    
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#CDCDCD"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
        
        <CheckBox
            android:id="@+id/isScreenRotationBlockedCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/is_screen_rotation_blocked" />

        <View    
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#CDCDCD"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
        
        <CheckBox
            android:id="@+id/keepScreenONWhileMeasuringCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_screen_on_while_measuring" />

        <View    
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#CDCDCD"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
        
        <CheckBox
            android:id="@+id/showSummaryAtEndCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_summary_at_end" />
        
        <View    
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#CDCDCD"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/liveStreamTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="Livestream - Einstellungen"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/addressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/addressEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/http" />

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/deviceIDTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/device_id" />

                <EditText
                    android:id="@+id/deviceIDEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:ems="10" />

            </LinearLayout>

        </LinearLayout>
        
        <View    
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#CDCDCD"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

    </LinearLayout>

</ScrollView>