<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|center_vertical"
                    android:text="@string/frequency_generator"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            tools:context=".view.LocalMeasurementFragment" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/startFrequencyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text="@string/start_frequency_in_hz" />

                <EditText
                    android:id="@+id/startFrequencyEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_vertical|right"
                    android:inputType="number"
                    android:maxLength="10" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/startFrequencySeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="22000" />

            <CheckBox
                android:id="@+id/isFrequencyIntervalCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/frequency_interval_setting" />

            <LinearLayout
                android:id="@+id/endFrequencyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/endFrequencyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:text="@string/end_frequency_in_hz" />

                    <EditText
                        android:id="@+id/endFrequencyEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|right"
                        android:inputType="number"
                        android:maxLength="10" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/endFrequencySeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="22000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp" >

                <TextView
                    android:id="@+id/durationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/duration_in_s" />

                <EditText
                    android:id="@+id/durationEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_vertical|right"
                    android:hint="@string/duration_in_ms"
                    android:inputType="number"
                    android:maxLength="10"
                    android:text="5" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/startStopButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/start" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
